--- a/index.html
+++ b/index.html
@@ -2,10 +2,37 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <link href="Broadway/CSS/style.css" text="style/css" rel="stylesheet">
+    <title>Broadway Design</title>
+    <link href="C:\cygwin64\home\alexandre.pla\Broadway\Resources\CSS\style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    
+  <h1>Broadway Design</h1>
+  <nav>
+    <p><a href="#home">Home</a></p>
+    <p><a href="#process">Process</a></p>
+    <p><a href="#work">Work</a></p>
+    <p><a href="#team">Team</a></p>
+    <p><a href="#contact">Contact</a></p>
+  </nav>
+    <h2>Our Process</h2>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
+    <h3>Identify</h3>
+    <p>We focus on the most important details</p>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
+    <h3>Understand</h3>
+    <p>We study our projects inside and out</p>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
+    <h3>Execute</h3>
+    <p>We put everything we have into our work</p>
+    <h3 id ="new york">Designed in New York</h3>
+    <h3>Portfolio</h3>
+    <p>Coming Soon</p>
+    <h3>Team</h3>
+    <p>We're Hiring!</p>
+    <h3>Contact</h3>
+    <p>Phone: (555)-555-5555)</p>
+    <p>E-mail: test@example.com</p>
+    <p>Twitter: @test</p>
+    <p class="footer"><nav>@ Broadway 2016 <a href="#home">Home</a> <a href="#about">About</a> <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></nav></p>
   </body>
 </html>
